Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <p>Shiny is a web application framework for R for interactive web applications without using HTML, CSS or other web frameworks. This project is a simple Shiny I did for testing the framework. The app, is an interactive scatterplot of the 1974 Motor Trend dataset (mtcars), in which the user is able to change the variables to plot.</p>
 
-<p>The app can be found here: (Scatterplot Shiny App)[<a href="https://juande.shinyapps.io/ScatterplotShinyApp">https://juande.shinyapps.io/ScatterplotShinyApp</a>]</p>
+<p>The app can be found here: <a href="https://juande.shinyapps.io/ScatterplotShinyApp">Scatterplot Shiny App</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/juandes">juandes</a></p>
