--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Plotting the 1974 Motor Trend dataset using the Shiny framework</h1>
-        <p>This is a very simple app I did for testing the Shiny framework for R. The app is a dynamic scatterplot where the us able to change the variables to plot.</p>
+        <p>This is a very simple app I did for testing the Shiny framework for R. The app is a dynamic scatterplot where the user able to change the variables to plot.</p>
 
         <p class="view"><a href="https://github.com/juandes/Scatterplot-Shiny">View the Project on GitHub <small>juandes/Scatterplot-Shiny</small></a></p>
 
